--- a/src/main/resources/static/css/upload.css
+++ b/src/main/resources/static/css/upload.css
@@ -62,12 +62,46 @@
 }
 
 /*업로드 폼*/
+#profile_img_upload{
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
+#profile_img_upload + label {
+  border: 1px solid #d9e1e8;
+  background-color: #fff;
+  color: #0095f6;
+  border-radius: 2rem;
+  padding: 8px 17px 8px 17px;
+  font-weight: 500;
+  font-size: 15px;
+  box-shadow: 1px 2px 3px 0px #f2f2f2;
+  outline: none;
+  margin: 1rem 0;
+}
+
+#profile_img_upload:focus + label,
+#profile_img_upload + label:hover {
+  cursor: pointer;
+}
+
+
 .upload .upload-form {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+.upload__review{
+  width: 340px;
+  resize: vertical;
+  height: 100px;
+  padding-top: 7px;
+}
 /*업로드 인풋*/
 .upload .upload-form input[type="file"] {
   margin: 30px 0;
@@ -78,7 +112,7 @@
 .upload .upload-form .upload-img {
   width: 400px;
   height: 300px;
-  margin-bottom: 5px;
+  margin-bottom: 1rem;
 }
 
 /*업로드 이미지*/
