--- a/src/main/resources/static/css/story.css
+++ b/src/main/resources/static/css/story.css
@@ -39,6 +39,7 @@
   margin-bottom: 30px;
   border: 1px solid #dbdbdb;
   border-radius: 4px;
+  background-color: white;
 }
 
 /*리스트 아이템 헤더부분*/
@@ -204,6 +205,7 @@
   height: 56px;
   border: 0;
   padding-left: 15px;
+  font-size: 16px;
 }
 /* 입력하기 버튼 */
 .main .container .story-list .story-list__item .sl__item__input button {
@@ -213,7 +215,8 @@
   background-color: transparent;
   font-weight: 500;
   color: #0095f6;
-  font-size: 14px;
+  font-size: 17px;
+  font-weight: bold;
 }
 
 /* Event */
