--- a/src/main/resources/static/css/story.css
+++ b/src/main/resources/static/css/story.css
@@ -57,31 +57,31 @@
 }
 
 /*리스트 아이템 헤더 이미지영역 박스*/
-.main
-  .container
-  .story-list
-  .story-list__item
-  .sl__item__header
-  div:nth-child(1) {
-  width: 40px;
-  height: 40px;
-  padding: 3px;
-  border-radius: 50%;
-  position: relative;
-}
+/*.main*/
+/*  .container*/
+/*  .story-list*/
+/*  .story-list__item*/
+/*  .sl__item__header*/
+/*  div:nth-child(1) {*/
+/*  width: 40px;*/
+/*  height: 40px;*/
+/*  padding: 3px;*/
+/*  border-radius: 50%;*/
+/*  position: relative;*/
+/*}*/
 
-/*리스트 아이템 헤더 실제이미지*/
-.main
-  .container
-  .story-list
-  .story-list__item
-  .sl__item__header
-  div:nth-child(1)
-  img {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-}
+/*!*리스트 아이템 헤더 실제이미지*!*/
+/*.main*/
+/*  .container*/
+/*  .story-list*/
+/*  .story-list__item*/
+/*  .sl__item__header*/
+/*  div:nth-child(1)*/
+/*  img {*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  border-radius: 50%;*/
+/*}*/
 
 /* 게시물 이미지 박스*/
 .main .container .story-list .story-list__item .sl__item__img {
@@ -136,6 +136,25 @@
   .sl__item__contents
   .sl__item__contents__content {
   padding: 5px 15px;
+  display: flex;
+}
+
+.main
+.container
+.story-list
+.story-list__item
+.sl__item__contents
+.sl__item__contents__content div {
+  width: 2rem;
+}
+
+.main
+.container
+.story-list
+.story-list__item
+.sl__item__contents
+.sl__item__contents__content a{
+  color: #0095f6;
 }
 
 /*게시물 like 갯수스타일*/
