--- a/src/main/resources/static/css/update.css
+++ b/src/main/resources/static/css/update.css
@@ -66,11 +66,12 @@
 /*form 입력요소 타이틀*/
 .setting-container .setting__content div .item__title {
   flex: 1;
-  padding-right: 30px;
+  padding-right: 17px;
   text-align: right;
   font-size: 17px;
   font-weight: 600;
   padding-top: 3px;
+  width: 256px;
 }
 
 /*form 입력요소 인풋박스*/
