--- a/src/main/resources/static/css/story.css
+++ b/src/main/resources/static/css/story.css
@@ -41,7 +41,12 @@
   border-radius: 4px;
   background-color: white;
 }
-
+.story-cnt{
+  color: #0095f6;
+  font-size: 15px;
+  font-family: 'Gowun Dodum', sans-serif;
+  font-weight: bold;
+}
 /*리스트 아이템 헤더부분*/
 .main .container .story-list .story-list__item .sl__item__header {
   width: 100%;
@@ -167,7 +172,7 @@
   .sl__item__contents .like{
 	background-color: transparent;
 	border: 0;
-	color: #aaa;
+	color: #000000;
 	font-size: 14px;
 	margin-bottom: 5px;
 	text-indent: 15px;
