--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -64,6 +64,11 @@
 /*  width: 120px;*/
 /*}*/
 
+.logo:hover {
+  text-decoration: none;
+  color: black;
+}
+
 .navi > .navi-list {
   display: flex;
 }
