리뷰 페이지 되돌리기,,

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -83,7 +83,9 @@
   color: #000000;
   margin-top: 4px;
 }
-
+.navi ul{
+  margin-bottom: 0;
+}
 @media screen and (max-width: 935px) {
   .header .container {
     width: 100%;
