--- a/src/main/resources/static/css/story.css
+++ b/src/main/resources/static/css/story.css
@@ -53,6 +53,8 @@
   height: 60px;
   display: flex;
   align-items: center;
+}
+.sl__item__header--home{
   justify-content: space-between;
 }
 
@@ -63,31 +65,31 @@
 }
 
 /*리스트 아이템 헤더 이미지영역 박스*/
-/*.main*/
-/*  .container*/
-/*  .story-list*/
-/*  .story-list__item*/
-/*  .sl__item__header*/
-/*  div:nth-child(1) {*/
-/*  width: 40px;*/
-/*  height: 40px;*/
-/*  padding: 3px;*/
-/*  border-radius: 50%;*/
-/*  position: relative;*/
-/*}*/
+.main
+  .container
+  .story-list
+  .story-list__item
+  .sl__item__header--review
+  div:nth-child(1) {
+  width: 40px;
+  height: 40px;
+  padding: 3px;
+  border-radius: 50%;
+  position: relative;
+}
 
 /*!*리스트 아이템 헤더 실제이미지*!*/
-/*.main*/
-/*  .container*/
-/*  .story-list*/
-/*  .story-list__item*/
-/*  .sl__item__header*/
-/*  div:nth-child(1)*/
-/*  img {*/
-/*  width: 100%;*/
-/*  height: 100%;*/
-/*  border-radius: 50%;*/
-/*}*/
+.main
+  .container
+  .story-list
+  .story-list__item
+  .sl__item__header--review
+  div:nth-child(1)
+  img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
 
 /* 게시물 이미지 박스*/
 .main .container .story-list .story-list__item .sl__item__img {
