--- a/src/main/resources/static/css/story.css
+++ b/src/main/resources/static/css/story.css
@@ -17,6 +17,12 @@
   width: 6rem;
   height: 27px;
 }
+.story__comment-list{
+  display: none;
+}
+.story__comment-list--more{
+  cursor: pointer;
+}
 
 /*컨테이너*/
 .main .container {
