--- a/src/main/resources/static/css/story.css
+++ b/src/main/resources/static/css/story.css
@@ -43,6 +43,10 @@
   color: #0095f6;
   font-weight: bold;
   cursor: pointer;
+  display: flex;
+}
+.review__hash p:nth-child(1){
+  padding-right: 10px;
 }
 /*게시물 리스트 아이템*/
 .main .container .story-list .story-list__item {
@@ -62,6 +66,7 @@
   width: 100%;
   height: 60px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 .sl__item__header--home{
@@ -72,6 +77,7 @@
 .main .container .story-list .story-list__item .sl__item__header div {
   margin-left: 10px;
   font-size: 19px;
+  white-space:nowrap;
 }
 
 /*리스트 아이템 헤더 이미지영역 박스*/
@@ -266,7 +272,7 @@
   .sl__item__contents__icon
   button:first-child
   .active {
-  color: red;
+  color: #0095f6;
 }
 
 
