--- a/src/main/resources/static/css/story.css
+++ b/src/main/resources/static/css/story.css
@@ -134,7 +134,8 @@
   .sl__item__contents
   .sl__item__contents__icon {
   height: 40px;
-  padding: 5px 0;      
+  padding: 5px 0;
+  text-indent: 10px;
 }
 
 /*좋아요 실제 버튼*/
@@ -194,6 +195,7 @@
 	font-size: 14px;
 	margin-bottom: 5px;
 	text-indent: 15px;
+    padding-top: 10px;
 }
 /*게시물 좋아요 count값 */
 .main
