update rating average

--- a/src/main/resources/static/css/story.css
+++ b/src/main/resources/static/css/story.css
@@ -32,6 +32,39 @@
   flex-direction: column;
   margin: 0 auto;
 }
+/*별점*/
+.star-ratings-avg--text{
+  font-family: 'Single Day', cursive;
+  font-size: 28px;
+  padding-right: 1rem;
+}
+.star-ratings {
+  font-size: 28px;
+  color: #aaa9a9;
+  position: relative;
+  unicode-bidi: bidi-override;
+  width: max-content;
+  -webkit-text-fill-color: transparent; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 1.3px;
+  -webkit-text-stroke-color: #2b2a29;
+}
+
+.star-ratings-fill {
+  color: #fff58c;
+  padding: 0;
+  position: absolute;
+  z-index: 1;
+  display: flex;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  -webkit-text-fill-color: gold;
+}
+
+.star-ratings-base {
+  z-index: 0;
+  padding: 0;
+}
 
 /*게시물리스트*/
 .main .container .story-list {
