--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -189,3 +189,8 @@ color: #fff !important;
   background: #008000 !important;
   color: #fff !important;
 }
+
+.cta.purple {
+  background: #5b3a99 !important;
+  color: #fff !important;
+}
