--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -179,6 +179,26 @@ button {
   color: #2db400;
 }
 
+/* 카카오 로그인 영역 */
+.login__kakao {
+  padding: 0 40px;
+  margin-top: 15px;
+}
+/*카카오 로그인 버튼*/
+.login__kakao button {
+  background-color: #fff;
+  width: 100%;
+  height: 30px;
+  border: 0;
+  font-weight: 600;
+  font-size: 15px;
+}
+
+.login__kakao button img {
+  width: 144px;
+}
+
+
 /*가입페이지로 이동*/
 .login__register {
   margin-top: 10px;
