--- a/src/main/resources/static/css/storyCopy.css
+++ b/src/main/resources/static/css/storyCopy.css
@@ -71,10 +71,8 @@
 .main .container .story-list {
   display: flex;
   flex-direction: column;
-  overflow: scroll;
-  height: 500px;
+  width: 100%;
 }
-
 .review__hash{
   color: #0095f6;
   font-weight: bold;
@@ -86,9 +84,10 @@
 }
 /*게시물 리스트 아이템*/
 .main .container .story-list .story-list__item {
+  margin-bottom: 30px;
   border: 1px solid #dbdbdb;
   border-radius: 4px;
-  background:rgba(255, 255, 255, 0.7);;
+  background-color: white;
 }
 .story-cnt{
   color: #0095f6;
@@ -101,10 +100,9 @@
   width: 100%;
   height: 60px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
 }
-
 .sl__item__header--home{
   justify-content: space-between;
 }
@@ -112,10 +110,9 @@
 /*리스트 아이템 헤더 div*/
 .main .container .story-list .story-list__item .sl__item__header div {
   margin-left: 10px;
-  font-size: 15px;
+  font-size: 19px;
   white-space:nowrap;
 }
-
 
 /*리스트 아이템 헤더 이미지영역 박스*/
 .main
@@ -160,8 +157,7 @@
 .main .container .story-list .story-list__item .sl__item__contents {
   display: flex;
   flex-direction: column;
-  font-size: 11px;
-  padding-left: 1rem;
+  padding: 1rem;
 }
 
 /*좋아요 버튼영역*/
@@ -196,7 +192,7 @@
   padding: 5px 15px
 }
 .sl__item__avgRating div:nth-child(1){
-  width: 1rem;
+  width: 2rem;
 }
 
 /*게시물 내용*/
@@ -216,7 +212,7 @@
 .story-list__item
 .sl__item__contents
 .sl__item__contents__content div {
-  width: 1rem;
+  width: 2rem;
 }
 
 .main
@@ -322,179 +318,5 @@
   color: #0095f6;
 }
 
-.map_wrap a, .map_wrap a:hover, .map_wrap a:active {
-  color: #000;
-  text-decoration: none;
-}
-
-.map_wrap {
-  position: relative;
-  width: 450px;
-  height: 500px;
-}
-
-#menu_wrap {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 250px;
-  margin: 10px 0 30px 10px;
-  padding: 5px;
-  overflow-y: auto;
-  background: rgba(255, 255, 255, 0.7);
-  z-index: 1;
-  font-size: 12px;
-  border-radius: 10px;
-}
-
-.bg_white {
-  background: #fff;
-}
-
-#menu_wrap hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 2px solid #5F5F5F;
-  margin: 3px 0;
-}
-
-#menu_wrap .option {
-  text-align: center;
-}
-
-#menu_wrap .option p {
-  margin: 10px 0;
-}
-
-#menu_wrap .option button {
-  margin-left: 5px;
-}
-
-#placesList li {
-  list-style: none;
-}
-
-#placesList .item {
-  position: relative;
-  border-bottom: 1px solid #888;
-  overflow: hidden;
-  cursor: pointer;
-  min-height: 65px;
-}
-
-#placesList .item span {
-  display: block;
-  margin-top: 4px;
-}
-
-#placesList .item h5, #placesList .item .info {
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-}
-
-#placesList .item .info {
-  padding: 10px 0 10px 55px;
-}
-
-#placesList .info .gray {
-  color: #8a8a8a;
-}
-
-#placesList .info .jibun {
-  padding-left: 26px;
-  background: url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/places_jibun.png) no-repeat;
-}
-
-#placesList .info .tel {
-  color: #009900;
-}
-
-#placesList .item .markerbg {
-  float: left;
-  position: absolute;
-  width: 36px;
-  height: 37px;
-  margin: 10px 0 0 10px;
-  background: url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_number_blue.png) no-repeat;
-}
-
-#placesList .item .marker_1 {
-  background-position: 0 -10px;
-}
-
-#placesList .item .marker_2 {
-  background-position: 0 -56px;
-}
-
-#placesList .item .marker_3 {
-  background-position: 0 -102px
-}
-
-#placesList .item .marker_4 {
-  background-position: 0 -148px;
-}
-
-#placesList .item .marker_5 {
-  background-position: 0 -194px;
-}
-
-#placesList .item .marker_6 {
-  background-position: 0 -240px;
-}
-
-#placesList .item .marker_7 {
-  background-position: 0 -286px;
-}
-
-#placesList .item .marker_8 {
-  background-position: 0 -332px;
-}
-
-#placesList .item .marker_9 {
-  background-position: 0 -378px;
-}
-
-#placesList .item .marker_10 {
-  background-position: 0 -423px;
-}
-
-#placesList .item .marker_11 {
-  background-position: 0 -470px;
-}
-
-#placesList .item .marker_12 {
-  background-position: 0 -516px;
-}
-
-#placesList .item .marker_13 {
-  background-position: 0 -562px;
-}
-
-#placesList .item .marker_14 {
-  background-position: 0 -608px;
-}
-
-#placesList .item .marker_15 {
-  background-position: 0 -654px;
-}
-
-#pagination {
-  margin: 10px auto;
-  text-align: center;
-}
-
-#pagination a {
-  display: inline-block;
-  margin-right: 10px;
-}
-
-#pagination .on {
-  font-weight: bold;
-  cursor: default;
-  color: #777;
-}
 
 
