--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -19,11 +19,11 @@
 
 .header .container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   width: 935px;
   margin: 0 auto;
   height: 100%;
+  justify-content: center;
 }
 
 .header__search{
@@ -54,11 +54,7 @@
 }
 
 .logo {
-  display: flex;
-  align-items: center;
-  font-family: 'Gowun Dodum', sans-serif;
-  font-size: 26px;
-  color: black;
+  display: none;
 }
 /*.logo img {*/
 /*  width: 120px;*/
@@ -71,11 +67,12 @@
 
 .navi > .navi-list {
   display: flex;
+  padding-left: 5%;
 }
 .navi > .navi-list .navi-item {
   flex: 1;
   text-align: center;
-  margin: 0 15px;
+  margin: 0 8px;
   display: flex;
 }
 .navi > .navi-list .navi-item a i {
@@ -86,6 +83,29 @@
 .navi ul{
   margin-bottom: 0;
 }
+
+@media screen and (min-width: 768px){
+  .logo {
+    display: flex;
+    align-items: center;
+    font-family: 'Gowun Dodum', sans-serif;
+    font-size: 26px;
+    color: black;
+  }
+
+  .navi > .navi-list .navi-item {
+    margin: 0 15px;
+  }
+  .header .container {
+    justify-content: space-between;
+  }
+
+  .navi > .navi-list {
+    padding-left: 0;
+  }
+
+}
+
 @media screen and (max-width: 935px) {
   .header .container {
     width: 100%;
