--- a/src/main/resources/static/css/update.css
+++ b/src/main/resources/static/css/update.css
@@ -48,7 +48,7 @@
 
 /* 유저이미지, 유저아이디*/
 .setting-container .setting__content .content-item__01 .item__img {
-  flex: 1;
+  flex: 2;
   text-align: right;
   padding-right: 30px;
 }
@@ -88,7 +88,7 @@
 }
 /*form 입력요소 인풋박스*/
 .setting-container .setting__content div .item__input {
-  flex: 3;
+  flex: 2;
   display: flex;
   flex-direction: column;
 }
@@ -132,6 +132,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  margin-left: 15rem;
 }
 
 /*제출버튼*/
@@ -177,5 +178,9 @@
   /*form 입력요소 소개부분*/
   .setting-container .setting__content div .item__input textarea {
     width: 355px;
+  }
+  /*제출버튼*/
+  .setting-container .setting__content .content-item__12 .item__input {
+    margin-left: 24rem;
   }
 }
